--- a/src/mail/mail.html
+++ b/src/mail/mail.html
@@ -3,9 +3,55 @@
 <html lang="en">
 <head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>3snet</title>
+	<style>
+		h4 {
+			margin-bottom: 10px;
+		}
+		h4 + p,
+		h4 + ul {
+			color: #3cf5f2;
+			margin-top: 0px;
+		}
+		p{
+			font-weight: 400;
+		}
+		ul{
+			padding-left: 0;
+			list-style: none;
+			line-height: 18px;
+		}
+		ul li{
+			margin-bottom: 5px;
+			font-weight: 400;
+		}
+		ul li>span{
+			display: inline-block;
+			width: 6px;
+			height: 6px;
+			background: #ff9800;
+			border-radius: 50%;
+			margin-right: 10px;
+			position: relative;
+			top: -2px
+		}
+		.text-center {
+			text-align: center;
+		}
+		a.btn {
+			background: #40f3f7;
+			padding: 10px 30px;
+			margin: 0px 0 25px;
+			display: inline-block;
+			color: #192138;
+			text-decoration: none;
+		}
+		a{
+			color: #FF9800;
+		}
+	</style>
 </head>
 <body style="margin: 0; padding: 0;">
-<table cellpadding="0" cellspacing="0" style="color: #3cf5f2; background-color: #192138" width="100%">
+<table cellpadding="0" cellspacing="0" style="color: #3cf5f2; background-color: #192138; font-weight: 600;" width="100%">
 	<tbody>
 		<tr>
 			<td>
@@ -13,16 +59,44 @@
 				<tbody>
 					<tr>
 						<td align="left" style="font-size: 17px; line-height: 24px; padding-bottom: 20px; padding-top: 20px;">
-						<div style="text-align: center;"><img alt="logo" src="http://3snet.ru/img/logo.png" style="max-width: 200px;" /></div>
 
-						<div style="color:#FF9800;">White3snet: Цвет настроения — белый!<br />
-						<br />
-						У нас прекрасные новости! Сегодня начинает работу новая сеть White3snet! Теперь все, что не запрещено - разрешено! Уже сейчас в новой партнерской сети есть офферы на займы, игры, дэйтинг, конкурсы. В ближайшее время появятся услуги, e-commerce и другие исключительно белые вещи.<br />
-						Все веб-мастера, работающие с 3snet, автоматически импортированы в новую сеть под тем же ID. Каждый веб может зайти в White3snet под своим e-mail (нужно только сбросить пароль и создать себе новый), выбрать оффер и начинать лить! <br />
-						Приглашаем новых и старых вебов, а также рекламодателей первыми оценить все возможности <span style="color: rgb(255, 152, 0);"><a href="https://my.white3snet.com/" style="color: #ff9800;" target="_blank">White3snet</a>.</span></div>
-						 
+							<div style="text-align: center;"><img alt="logo" src="http://3snet.ru/img/logo.png" style="max-width: 200px;" /></div>
+							<div style="color:#FF9800;">
+								<h4>#3snet</h4>
+								<ul>
+									<li><span></span>Lorem ipsum dolor sit amet elit. Distinctio ratione aliquam?</li>
+									<li><span></span>Lorem ipsum dolor sit amet elit. Magnam eum ipsum amet elit amet elit amet elit dolor ipsum dolor maxime corporis.</li>
+									<li><span></span>Lorem ipsum dolor sit amet elit. Numquam nesciunt, impedit doloremque!</li>
+									<li><span></span>Lorem ipsum dolor sit amet, <a href="#" target="_blank"> consectetur adipisicing</a> elit. Eligendi incidunt dolorem, quibusdam!</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui voluptates aliquam non.</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur ipsum dolor sit amet, consectetur ipsum dolor sit amet, consectetur adipisicing elit. Cum hic voluptatum, perferendis.</li>
+								</ul>
+							 	<a href="https://3snet.ru/" target="_blank">Перейти к 3snet.ru</a>
+								<br /><br />
 
-						<div style="color:#FF9800;">P.S. CPA-сеть <span style="color: rgb(255, 152, 0);"><a href="https://my.3snet.ru/" style="color: #ff9800;" target="_blank">3snet</a></span> продолжает работу в прежнем режиме!</div>
+								<h4>#white3snet</h4>
+								<ul>
+									<li><span></span>Lorem adipisicing elit. Distinctio ratione eos aliquam?</li>
+									<li><span></span>Lorem adipisicing elit. Magnam eum maxime corporis.</li>
+									<li><span></span>Lorem adipisicing elit. Numquam nesciunt, impedit doloremque!</li>
+									<li><span></span>Lorem adipisicing elit. Eligendi incidunt dolorem, quibusdam!</li>
+									<li><span></span>Lorem <a href="#" target="_blank">ipsum dolor sit amet,</a> consectetur adipisicing elit. Qui voluptates aliquam non.</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum hic voluptatum, perferendis.</li>
+								</ul>
+							 	<a href="https://my.white3snet.com/" target="_blank">Перейти к white3snet.com</a>
+								<br /><br />
+
+								<h4>#новости</h4>
+								<ul>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ratione eos aliquam?</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam eum maxime corporis.</li>
+									<li><span></span>Lorem adipisicing elit. Numquam nesciunt, impedit doloremque!</li>
+									<li><span></span>Lorem adipisicing elit. Eligendi <a href="#" target="_blank"> consectetur adipisicing</a> incidunt dolorem, quibusdam!</li>
+									<li><span></span>Lorem adipisicing elit. Qui voluptates aliquam non.</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum hic voluptatum, perferendis.</li>
+								</ul>
+							</div>
+
 						</td>
 					</tr>
 					<tr>
@@ -32,16 +106,44 @@
 					</tr>
 					<tr>
 						<td align="left" style="font-size: 17px; line-height: 24px; padding-bottom: 20px; padding-top: 20px;">
-						<div style="text-align: center;"><img alt="logo" src="http://3snet.ru/img/logo.png" style="max-width: 200px;" /></div>
 
-						<div style="color:#FF9800;">There are great news!<br />
-						<br />
-						The new ad network White3snet starts working today! Everything that isn't forbidden is authorized now! Loan, game, dating, competition offers are already available in our new affiliate network. In the nearest future services, e-commerce and other absolutely allowed offers will be added.<br />
-						The data of all webmasters working with 3snet have been automatically imported to new network under the same IDs. Each webmaster can login to White3snet with the same e-mail and using the "password reset" option. After the first login just choose offers and start running them!<br />
-						Advertisers and new/current webmasers are invited to be the first ones who will estimate all opportunities of <a href="https://my.white3snet.com/" style="color: #ff9800;" target="_blank">White3snet</a>.</div>
-						 
+							<div style="text-align: center;"><img alt="logo" src="http://3snet.ru/img/logo.png" style="max-width: 200px;" /></div>
+							<div style="color:#FF9800;">
+								<h4>#3snet</h4>
+								<ul>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ratione eos aliquam?</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam eum maxime corporis.</li>
+									<li><span></span>Lorem ipsum dolor sit amet, nesciunt, impedit doloremque!</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" target="_blank">Eligendi incidunt dolorem, quibusdam!</a></li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui voluptates aliquam non.</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum hic voluptatum, perferendis.</li>
+								</ul>
+							 	<a href="https://3snet.ru/en/" target="_blank">Go to 3snet.ru</a>
+								<br /><br />
 
-						<div style="color:#FF9800;">P.S. CPA network <span style="color: rgb(255, 152, 0);"><a href="https://my.3snet.ru/" style="color: #ff9800;" target="_blank">3snet</a></span> keeps working as usual!</div>
+								<h4>#white3snet</h4>
+								<ul>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ratione eos aliquam?</li>
+									<li><span></span>Lorem ipsum dolor sit amet, <a href="#" target="_blank"> consectetur adipisicing elit.</a> Magnam eum maxime corporis.</li>
+									<li><span></span>Lorem ipsum dolor sit amet, nesciunt, impedit doloremque!</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi incidunt dolorem, quibusdam!</li>
+									<li><span></span>Lorem ipsum dolor sit amet Qui voluptates aliquam non.</li>
+									<li><span></span>Lorem ipsum dolor sit amet Cum hic voluptatum, perferendis.</li>
+								</ul>
+							 	<a href="https://my.white3snet.com/?lang=en" target="_blank">Go to white3snet.com</a>
+								<br /><br />
+
+								<h4>#news</h4>
+								<ul>
+									<li><span></span>Lorem ipsum dolor sit amet Distinctio ratione eos aliquam?</li>
+									<li><span></span>Lorem ipsum dolor sit amet Magnam eum maxime corporis.</li>
+									<li><span></span>Lorem ipsum dolor sit amet, nesciunt, impedit doloremque!</li>
+									<li><span></span>Lorem ipsum dolor sit amet Eligendi incidunt dolorem, quibusdam!</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui voluptates aliquam non.</li>
+									<li><span></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum hic voluptatum, perferendis.</li>
+								</ul>
+							</div>
+
 						</td>
 					</tr>
 					<tr>
@@ -49,7 +151,7 @@
 						<div style="padding: 40px 0 20px;"><a href="https://facebook.com/3snetru" style="text-decoration: none" target="_blank"><span><img alt="" src="https://3snet.ru/img/soc/fb.png" style="max-width: 40px; margin: 0 5px;" /></span></a> <a href="https://vk.com/3snet" style="text-decoration: none" target="_blank"><span><img alt="" src="https://3snet.ru/img/soc/vk.png" style="max-width: 40px; margin: 0 5px;" /></span></a> <a href="https://www.linkedin.com/company/3snet" style="text-decoration: none" target="_blank"><span><img alt="" src="https://3snet.ru/img/soc/in.png" style="max-width: 40px; margin: 0 5px;" /></span></a> <a href="https://www.instagram.com/3snet.ru/" style="text-decoration: none" target="_blank"><span><img alt="" src="https://3snet.ru/img/soc/inst.png" style="max-width: 40px; margin: 0 5px;" /></span></a></div>
 
 						<hr />
-						<div style="text-align:center;"><a href="http://mydomen.ru.com/mw/index.php/lists/kz432q8dwl03b/unsubscribe">Unsubscribe</a> or <a href="">Complain</a></div>
+						<div style="text-align:center;"><a href="http://mydomen.ru.com/mw/index.php/lists/kz432q8dwl03b/unsubscribe" style="color: #9a9a9a;">Unsubscribe</a> or <a href="" style="color: #9a9a9a;">Complain</a></div>
 						</td>
 					</tr>
 				</tbody>
