--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,13 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<h1>Партнерская сеть 3snet предлагает</h1>
+					<div class="separator"><span></span></div>
 					<h2>Бинарные опционы, форекс, гэмблинг, беттинг — трафик, лиды, депозиты!</h2>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-6">
+		<div class="row headDescription">
+			<div class="col-md-6 headDescription_item">
 				<h3>НАЗВАНИЕ 1</h3>
 				<ul>
 					<li>Рекламодателям - трафик</li>
@@ -34,7 +35,7 @@
 				</ul>
 				<a href="" class="btn">Войти в 3snet</a>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 headDescription_item">
 				<h3>НАЗВАНИЕ 2</h3>
 				<ul>
 					<li>Рекламодателям - трафик</li>
@@ -62,13 +63,80 @@
 </header>
 
 <section class="ourAdvertisers">
+	<div class="ourAdvertisers_shabow"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
 				<h3>Наши рекламодатели</h3>
+				<div class="separator"><span></span></div>
+
 			</div>
 			<div class="col-12">
-				<img src="" alt="">
+				<div class="owl-carousel owl-theme ourAdvertisers-carousel">
+					<div class="item">
+						<h4>#кейсы</h4>
+						<div class="item_img">
+							<img src="img/gulp_stylus.png" alt="">
+						</div>
+						<h5 class="title">Лей, пока горячо</h5>
+						<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
+						<a href="#" class="btn showMore">Подробнее</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<img src="img/mastercard_ico.png" alt="">
+			</div>
+			<div class="col-md-3">
+				<img src="img/visa_ico.png" alt="">
+			</div>
+			<div class="col-md-3">
+				<img src="img/qiwi_ico.png" alt="">
+			</div>
+			<div class="col-md-3">
+				<img src="img/yandexmoney_ico.png" alt="">
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="casesNews">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<h3>Кейсы, конкунрсы, новости</h3>
+				<div class="separator"><span></span></div>
+			</div>
+			<div class="col-12">
+				<div class="owl-carousel owl-theme casesNews-carousel">
+					<div class="item">
+						<h4>#кейсы</h4>
+						<div class="item_img">
+							<img src="img/gulp_stylus.png" alt="">
+						</div>
+						<h5 class="title">Лей, пока горячо</h5>
+						<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
+						<a href="#" class="btn showMore">Подробнее</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="subscrabeBox">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-7">
+				<p>
+					Подписка, подпищись....Захват контактов, будь в курсе новостей (ссылка на новости)
+				</p>
+			</div>
+			<div class="col-md-4">
+				<form action="">
+					<input type="text" placeholder="Email" name="mail">
+					<button></button>
+				</form>
 			</div>
 		</div>
 	</div>
