--- a/src/index.html
+++ b/src/index.html
@@ -7,56 +7,61 @@
 				<div class="col-xs-12">
 					<h1>Партнерская сеть 3snet предлагает</h1>
 					<div class="separator"><span></span></div>
-					<h2>Бинарные опционы, форекс, гэмблинг, беттинг — трафик, лиды, депозиты!</h2>
+					<h2>Бинарные опционы, форекс,<br>гэмблинг, беттинг — трафик, лиды, депозиты!</h2>
 				</div>
 			</div>
 		</div>
 		<div class="row headDescription">
 			<div class="col-md-6 headDescription_item">
-				<h3>НАЗВАНИЕ 1</h3>
-				<ul>
-					<li>Рекламодателям - трафик</li>
-					<li>Гемблинг / Покер / Лотереи</li>
-					<li>Беттинг</li>
-					<li>Форекс / Бинарные опционы</li>
-					<li>Крипта / Майнинг</li>
-					<li>Займы / Кредитование</li>
-					<li>Дэйтинг</li>
-					<li>Нутра</li>
-				</ul>
-				<ul>
-					<li>Партнерам - отличные условия</li>
-					<li>Высокие ставки по офферам</li>
-					<li>Индивидуальные условия</li>
-					<li>Поддержка онлайн</li>
-					<li>Регулярные выплаты</li>
-					<li>География - весь мир</li>
-					<li>CPL, CPA, CPI, RevShare</li>
-				</ul>
-				<a href="" class="btn">Войти в 3snet</a>
+				<div class="headDescription_itemWrapper fl-right">
+					<h3>НАЗВАНИЕ 1</h3>
+					<ul>
+						<li>Рекламодателям - трафик</li>
+						<li>Гемблинг / Покер / Лотереи</li>
+						<li>Беттинг</li>
+						<li>Форекс / Бинарные опционы</li>
+						<li>Крипта / Майнинг</li>
+						<li>Займы / Кредитование</li>
+						<li>Дэйтинг</li>
+						<li>Нутра</li>
+					</ul>
+					<ul>
+						<li>Партнерам - отличные условия</li>
+						<li>Высокие ставки по офферам</li>
+						<li>Индивидуальные условия</li>
+						<li>Поддержка онлайн</li>
+						<li>Регулярные выплаты</li>
+						<li>География - весь мир</li>
+						<li>CPL, CPA, CPI, RevShare</li>
+					</ul>
+					<a href="" class="btn yellowGrd">Войти в 3snet</a>
+				</div>
 			</div>
 			<div class="col-md-6 headDescription_item">
-				<h3>НАЗВАНИЕ 2</h3>
-				<ul>
-					<li>Рекламодателям - трафик</li>
-					<li>Гемблинг / Покер / Лотереи</li>
-					<li>Беттинг</li>
-					<li>Форекс / Бинарные опционы</li>
-					<li>Крипта / Майнинг</li>
-					<li>Займы / Кредитование</li>
-					<li>Дэйтинг</li>
-					<li>Нутра</li>
-				</ul>
-				<ul>
-					<li>Партнерам - отличные условия</li>
-					<li>Высокие ставки по офферам</li>
-					<li>Индивидуальные условия</li>
-					<li>Поддержка онлайн</li>
-					<li>Регулярные выплаты</li>
-					<li>География - весь мир</li>
-					<li>CPL, CPA, CPI, RevShare</li>
-				</ul>
-				<a href="" class="btn">Войти в white3snet</a>
+				<div class="headDescription_itemWrapper">
+					<div class="vsBox"><img src="img/3s_logo.png" alt=""></div>
+					<h3>НАЗВАНИЕ 2</h3>
+					<ul>
+						<li>Рекламодателям - трафик</li>
+						<li>Гемблинг / Покер / Лотереи</li>
+						<li>Беттинг</li>
+						<li>Форекс / Бинарные опционы</li>
+						<li>Крипта / Майнинг</li>
+						<li>Займы / Кредитование</li>
+						<li>Дэйтинг</li>
+						<li>Нутра</li>
+					</ul>
+					<ul>
+						<li>Партнерам - отличные условия</li>
+						<li>Высокие ставки по офферам</li>
+						<li>Индивидуальные условия</li>
+						<li>Поддержка онлайн</li>
+						<li>Регулярные выплаты</li>
+						<li>География - весь мир</li>
+						<li>CPL, CPA, CPI, RevShare</li>
+					</ul>
+					<a href="" class="btn yellowGrd">Войти в white3snet</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -112,7 +117,9 @@
 					<div class="item">
 						<h4>#кейсы</h4>
 						<div class="item_img">
-							<img src="img/gulp_stylus.png" alt="">
+							<div class="embed-responsive embed-responsive-16by9">
+								<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+							</div>
 						</div>
 						<h5 class="title">Лей, пока горячо</h5>
 						<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
