--- a/src/index.html
+++ b/src/index.html
@@ -134,15 +134,22 @@
 <section class="subscrabeBox">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-md-6">
 				<p>
 					Подписка, подпищись....Захват контактов, будь в курсе новостей (ссылка на новости)
 				</p>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-6">
 				<form action="">
-					<input type="text" placeholder="Email" name="mail">
-					<button></button>
+					<div class="inputWrapper">
+						<span class="inputWrapper_icon">
+							<span class="glyphicon glyphicon-envelope"></span>
+						</span>
+						<input type="text" placeholder="Email" name="mail">
+						<button class="btn yellowGrd">
+							<span class="glyphicon glyphicon-chevron-right"></span>
+						</button>
+					</div>
 				</form>
 			</div>
 		</div>
