--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 		<div class="row headDescription">
 			<div class="col-md-6 headDescription_item">
 				<div class="headDescription_itemWrapper fl-right">
-					<h3>НАЗВАНИЕ 1</h3>
+					<h3>3snet</h3>
 					<ul>
 						<li>Рекламодателям - трафик</li>
 						<li>Гемблинг / Покер / Лотереи</li>
@@ -40,27 +40,26 @@
 			<div class="col-md-6 headDescription_item">
 				<div class="headDescription_itemWrapper">
 					<div class="vsBox"><img src="img/3s_logo.png" alt=""></div>
-					<h3>НАЗВАНИЕ 2</h3>
+					<h3>White3snet</h3>
 					<ul>
 						<li>Рекламодателям - трафик</li>
-						<li>Гемблинг / Покер / Лотереи</li>
-						<li>Беттинг</li>
-						<li>Форекс / Бинарные опционы</li>
-						<li>Крипта / Майнинг</li>
-						<li>Займы / Кредитование</li>
+						<li>Е-коммерс</li>
+						<li>Конкурсы</li>
 						<li>Дэйтинг</li>
-						<li>Нутра</li>
+						<li>Услуги b2b/b2c</li>
+						<li>Займы</li>
+						<li>Игры</li>
 					</ul>
 					<ul>
-						<li>Партнерам - отличные условия</li>
-						<li>Высокие ставки по офферам</li>
-						<li>Индивидуальные условия</li>
-						<li>Поддержка онлайн</li>
-						<li>Регулярные выплаты</li>
-						<li>География - весь мир</li>
+						<li>Партнерам - уникальные предложения</li>
+						<li>Персональные условия</li>
+						<li>Поддержка и консультации 24/7</li>
+						<li>Выплаты строго по графику</li>
 						<li>CPL, CPA, CPI, RevShare</li>
+						<li>ГЕО - все страны мира</li>
+						<li>Большой выбор офферов<br>с высокими ставками</li>
 					</ul>
-					<a href="" class="btn yellowGrd">Войти в white3snet</a>
+					<a href="" class="btn yellowGrd">Войти в White3snet</a>
 				</div>
 			</div>
 		</div>
@@ -109,7 +108,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h3>Кейсы, конкунрсы, новости</h3>
+				<h3>Кейсы, конкурсы, новости</h3>
 				<div class="separator"><span></span></div>
 			</div>
 			<div class="col-12">
@@ -136,7 +135,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<p>
-					Подписка, подпищись....Захват контактов, будь в курсе новостей (ссылка на новости)
+					В курсе последних новостей будь!<br>Подписка на новости, кейсы, офферы
 				</p>
 			</div>
 			<div class="col-md-6">
