--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<h1>3snet и White3snet предлагают</h1>
+					<h1>3snet и White3snet</h1>
 					<div class="separator"><span></span></div>
 					  
 					<h2>Выгодное сотрудничество:<br>все вертикали, офферы, выплаты - трафик, лиды, депозиты!</h2>
@@ -17,23 +17,21 @@
 				<div class="headDescription_itemWrapper fl-right">
 					<h3>3snet</h3>
 					<ul>
-						<li>Рекламодателям - трафик</li>
-						<li>Гемблинг / Покер / Лотереи</li>
+						<li>Лотереи</li>
+						<li>Гемблинг / Покер</li>
 						<li>Беттинг</li>
 						<li>Форекс / Бинарные опционы</li>
 						<li>Крипта / Майнинг</li>
-						<li>Займы / Кредитование</li>
-						<li>Дэйтинг / Нутра</li>
+						<li>Adult</li>
 					</ul>
 					<ul>
-						<li>Партнерам - отличные условия</li>
 						<li>Высокие ставки по офферам</li>
 						<li>Индивидуальные условия</li>
-						<li>Поддержка онлайн</li>
+						<li>Онлайн поддержка</li>
 						<li>Регулярные выплаты</li>
 						<li>География - весь мир</li>
-						<li>CPL, CPA, CPI</li>
-						<li>RevShare</li>
+						<li>CPL, CPA, CPI, RevShare</li>
+						<li>&nbsp;</li>
 					</ul>
 					<a href="" class="btn yellowGrd">Войти в 3snet</a>
 				</div>
@@ -43,21 +41,20 @@
 					<div class="vsBox"><img src="img/3s_logo.png" alt=""></div>
 					<h3>White3snet</h3>
 					<ul>
-						<li>Рекламодателям - трафик</li>
 						<li>Е-коммерс</li>
 						<li>Конкурсы</li>
-						<li>Дэйтинг</li>
 						<li>Услуги b2b/b2c</li>
-						<li>Займы</li>
+						<li>Кредитование</li>
 						<li>Игры</li>
+						<li>Нутра</li>
+
 					</ul>
 					<ul>
-						<li>Партнерам - уникальные предложения</li>
 						<li>Персональные условия</li>
 						<li>Поддержка и консультации 24/7</li>
 						<li>Выплаты строго по графику</li>
 						<li>CPL, CPA, CPI, RevShare</li>
-						<li>ГЕО - все страны мира</li>
+						<li>ГЕО - весь мир</li>
 						<li>Большой выбор офферов<br>с высокими ставками</li>
 					</ul>
 					<a href="" class="btn yellowGrd">Войти в White3snet</a>
