--- a/src/index.html
+++ b/src/index.html
@@ -1,258 +1,260 @@
 //= template/head.html
 
-<header>
-	<div class="container">
+<content class="main">
+	<header>
+		<div class="container">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12">
+						<h1>3snet и White3snet</h1>
+						<div class="separator"><span></span></div>
+						  
+						<h2>Выгодное сотрудничество:<br>все вертикали, офферы, выплаты - трафик, лиды, депозиты!</h2>
+					</div>
+				</div>
+			</div>
+			<div class="row headDescription">
+				<div class="col-sm-6 headDescription_item">
+					<div class="headDescription_itemWrapper fl-right">
+						<h3>3snet</h3>
+						<ul>
+							<li>Лотереи</li>
+							<li>Гемблинг / Покер</li>
+							<li>Беттинг</li>
+							<li>Форекс / Бинарные опционы</li>
+							<li>Крипта / Майнинг</li>
+							<li>Adult</li>
+						</ul>
+						<ul>
+							<li>Высокие ставки по офферам</li>
+							<li>Индивидуальные условия</li>
+							<li>Онлайн поддержка</li>
+							<li>Регулярные выплаты</li>
+							<li>География - весь мир</li>
+							<li>CPL, CPA, CPI, RevShare</li>
+							<li>&nbsp;</li>
+						</ul>
+						<a href="" class="btn yellowGrd">Войти в 3snet</a>
+					</div>
+				</div>
+				<div class="col-sm-6 headDescription_item">
+					<div class="headDescription_itemWrapper">
+						<div class="vsBox"><img src="img/3s_logo.png" alt=""></div>
+						<h3>White3snet</h3>
+						<ul>
+							<li>Е-коммерс</li>
+							<li>Конкурсы</li>
+							<li>Услуги b2b/b2c</li>
+							<li>Кредитование</li>
+							<li>Игры</li>
+							<li>Нутра</li>
+
+						</ul>
+						<ul>
+							<li>Персональные условия</li>
+							<li>Поддержка и консультации 24/7</li>
+							<li>Выплаты строго по графику</li>
+							<li>CPL, CPA, CPI, RevShare</li>
+							<li>ГЕО - весь мир</li>
+							<li>Большой выбор офферов<br>с высокими ставками</li>
+						</ul>
+						<a href="" class="btn yellowGrd">Войти в White3snet</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+
+	<section class="ourAdvertisers" id="ourAdvertisers">
+		<div class="ourAdvertisers_shabow"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-12">
-					<h1>3snet и White3snet</h1>
+				<div class="col-12">
+					<h3>Наши рекламодатели</h3>
 					<div class="separator"><span></span></div>
-					  
-					<h2>Выгодное сотрудничество:<br>все вертикали, офферы, выплаты - трафик, лиды, депозиты!</h2>
+
 				</div>
-			</div>
-		</div>
-		<div class="row headDescription">
-			<div class="col-sm-6 headDescription_item">
-				<div class="headDescription_itemWrapper fl-right">
-					<h3>3snet</h3>
-					<ul>
-						<li>Лотереи</li>
-						<li>Гемблинг / Покер</li>
-						<li>Беттинг</li>
-						<li>Форекс / Бинарные опционы</li>
-						<li>Крипта / Майнинг</li>
-						<li>Adult</li>
-					</ul>
-					<ul>
-						<li>Высокие ставки по офферам</li>
-						<li>Индивидуальные условия</li>
-						<li>Онлайн поддержка</li>
-						<li>Регулярные выплаты</li>
-						<li>География - весь мир</li>
-						<li>CPL, CPA, CPI, RevShare</li>
-						<li>&nbsp;</li>
-					</ul>
-					<a href="" class="btn yellowGrd">Войти в 3snet</a>
-				</div>
-			</div>
-			<div class="col-sm-6 headDescription_item">
-				<div class="headDescription_itemWrapper">
-					<div class="vsBox"><img src="img/3s_logo.png" alt=""></div>
-					<h3>White3snet</h3>
-					<ul>
-						<li>Е-коммерс</li>
-						<li>Конкурсы</li>
-						<li>Услуги b2b/b2c</li>
-						<li>Кредитование</li>
-						<li>Игры</li>
-						<li>Нутра</li>
-
-					</ul>
-					<ul>
-						<li>Персональные условия</li>
-						<li>Поддержка и консультации 24/7</li>
-						<li>Выплаты строго по графику</li>
-						<li>CPL, CPA, CPI, RevShare</li>
-						<li>ГЕО - весь мир</li>
-						<li>Большой выбор офферов<br>с высокими ставками</li>
-					</ul>
-					<a href="" class="btn yellowGrd">Войти в White3snet</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</header>
-
-<section class="ourAdvertisers">
-	<div class="ourAdvertisers_shabow"></div>
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<h3>Наши рекламодатели</h3>
-				<div class="separator"><span></span></div>
-
-			</div>
-			<div class="col-12">
-				<div class="owl-carousel owl-theme ourAdvertisers-carousel">
-					<div class="item">
-						<h4>#кейсы</h4>
-						<div class="item_img">
-							<img src="img/gulp_stylus.png" alt="">
-						</div>
-						<h5 class="title">Лей, пока горячо</h5>
-						<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
-						<a href="#" class="btn showMore">Подробнее</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-12 partners-list">
-                <div class="partners-top">
-                    <span><img src="img/p/1-1.png"></span>
-                    <span><img src="img/p/1.png"></span>
-                    <span><img src="img/p/2.png"></span>
-                    <span><img src="img/p/3.png"></span>
-                    <span><img src="img/p/4.jpeg"></span>
-                    <span><img src="img/p/5.jpg"></span>
-                    <span><img src="img/p/6.jpeg"></span>
-                    <span><img src="img/p/7.jpeg"></span>
-                    <span><img src="img/p/8.png"></span>
-                    <span><img src="img/p/9.png"></span>
-                    <span><img src="img/p/11.png"></span>
-                    <span><img src="img/p/12.png"></span>
-                    <span><img src="img/p/13.jpg"></span>
-                    <span><img src="img/p/14.jpeg"></span>
-                </div>
-                <div class="partners-other">
-                    <span><img src="img/p/21.png"></span>
-                    <span><img src="img/p/22.jpeg"></span>
-                    <span><img src="img/p/23.jpeg"></span>
-                    <span><img src="img/p/24.png"></span>
-                    <span><img src="img/p/25.png"></span>
-                    <span><img src="img/p/26.jpeg"></span>
-                    <span><img src="img/p/27.jpeg"></span>
-                    <span><img src="img/p/31.jpeg"></span>
-                    <span><img src="img/p/32.jpeg"></span>
-                    <span><img src="img/p/34.png"></span>
-                    <span><img src="img/p/35.jpeg"></span>
-                    <span><img src="img/p/37.png"></span>
-                    <span><img src="img/p/39.png"></span>
-                    <span><img src="img/p/40.png"></span>
-                    <span><img src="img/p/42.png"></span>
-                    <span><img src="img/p/43.png"></span>
-                    <span><img src="img/p/44.png"></span>
-                    <span><img src="img/p/46.jpeg"></span>
-                    <span><img src="img/p/47.png"></span>
-                    <span><img src="img/p/78.jpeg"></span>
-                    <span><img src="img/p/49.jpeg"></span>
-                    <span><img src="img/p/50.jpeg"></span>
-                    <span><img src="img/p/51.jpeg"></span>
-                    <span><img src="img/p/52.png"></span>
-                    <span><img src="img/p/53.jpeg"></span>
-                    <span><img src="img/p/54.jpeg"></span>
-                    <span><img src="img/p/55.jpeg"></span>
-                    <span><img src="img/p/57.png"></span>
-                    <span><img src="img/p/59.jpeg"></span>
-
-                    <span><img src="img/p2/1.jpeg"></span>
-                    <span><img src="img/p2/2.jpeg"></span>
-                    <span><img src="img/p2/3.png"></span>
-                    <span><img src="img/p2/4.png"></span>
-                    <span><img src="img/p2/5.jpeg"></span>
-					<span><img src="img/p2/6.png"></span>
-					<span><img src="img/p2/7.png"></span>
-					<span><img src="img/p2/8.png"></span>
-					<span><img src="img/p2/10.png"></span>
-					<span><img src="img/p2/11.png"></span>
-					<span><img src="img/p2/12.png"></span>
-					<span><img src="img/p2/13.png"></span>
-					<span><img src="img/p2/14.png"></span>
-					<span><img src="img/p2/15.png"></span>
-					<span><img src="img/p2/16.png"></span>
-					<span><img src="img/p2/17.jpeg"></span>
-					<span><img src="img/p2/17.png"></span>
-					<span><img src="img/p2/18.jpeg"></span>
-					<span><img src="img/p2/19.jpeg"></span>
-					<span><img src="img/p2/20.jpeg"></span>
-					<span><img src="img/p2/21.png"></span>
-					<span><img src="img/p2/22.jpeg"></span>
-					<span><img src="img/p2/23.jpeg"></span>
-                </div>
-                <div class="partners-list-btn">
-	                <a class="btn yellowGrd show-list" >Показать полный список</a>
-	                <a class="btn yellowGrd hide-list">Скрыть полный список</a>
-                </div>
-
-            </div>
-		</div>
-	</div>
-</section>
-
-<section class="casesNews">
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<h3>Кейсы, конкурсы, новости</h3>
-				<div class="separator"><span></span></div>
-			</div>
-			<div class="col-12">
-				<div class="owl-carousel owl-theme casesNews-carousel">
-					<div class="item">
-						<h4>#кейсы</h4>
-						<div class="item_img">
-							<div class="embed-responsive embed-responsive-16by9">
-								<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+				<div class="col-12">
+					<div class="owl-carousel owl-theme ourAdvertisers-carousel">
+						<div class="item">
+							<h4>#кейсы</h4>
+							<div class="item_img">
+								<img src="img/gulp_stylus.png" alt="">
 							</div>
+							<h5 class="title">Лей, пока горячо</h5>
+							<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
+							<a href="#" class="btn showMore">Подробнее</a>
 						</div>
-						<h5 class="title">Лей, пока горячо</h5>
-						<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
-						<a href="#" class="btn showMore">Подробнее</a>
-					</div>
-					<div class="item">
-						<h4>#кейсы</h4>
-						<div class="item_img">
-							<div class="embed-responsive embed-responsive-16by9">
-								<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-							</div>
-						</div>
-						<h5 class="title">Лей, пока горячо</h5>
-						<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
-						<a href="#" class="btn showMore">Подробнее</a>
-					</div>
-					<div class="item">
-						<h4>#кейсы</h4>
-						<div class="item_img">
-							<div class="embed-responsive embed-responsive-16by9">
-								<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-							</div>
-						</div>
-						<h5 class="title">Лей, пока горячо</h5>
-						<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
-						<a href="#" class="btn showMore">Подробнее</a>
-					</div>
-					<div class="item">
-						<h4>#кейсы</h4>
-						<div class="item_img">
-							<div class="embed-responsive embed-responsive-16by9">
-								<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-							</div>
-						</div>
-						<h5 class="title">Лей, пока горячо</h5>
-						<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
-						<a href="#" class="btn showMore">Подробнее</a>
 					</div>
 				</div>
-			</div>
-		</div>
-	</div>
-</section>
+				<div class="col-md-12 partners-list">
+	                <div class="partners-top">
+	                    <span><img src="img/p/1-1.png"></span>
+	                    <span><img src="img/p/1.png"></span>
+	                    <span><img src="img/p/2.png"></span>
+	                    <span><img src="img/p/3.png"></span>
+	                    <span><img src="img/p/4.jpeg"></span>
+	                    <span><img src="img/p/5.jpg"></span>
+	                    <span><img src="img/p/6.jpeg"></span>
+	                    <span><img src="img/p/7.jpeg"></span>
+	                    <span><img src="img/p/8.png"></span>
+	                    <span><img src="img/p/9.png"></span>
+	                    <span><img src="img/p/11.png"></span>
+	                    <span><img src="img/p/12.png"></span>
+	                    <span><img src="img/p/13.jpg"></span>
+	                    <span><img src="img/p/14.jpeg"></span>
+	                </div>
+	                <div class="partners-other">
+	                    <span><img src="img/p/21.png"></span>
+	                    <span><img src="img/p/22.jpeg"></span>
+	                    <span><img src="img/p/23.jpeg"></span>
+	                    <span><img src="img/p/24.png"></span>
+	                    <span><img src="img/p/25.png"></span>
+	                    <span><img src="img/p/26.jpeg"></span>
+	                    <span><img src="img/p/27.jpeg"></span>
+	                    <span><img src="img/p/31.jpeg"></span>
+	                    <span><img src="img/p/32.jpeg"></span>
+	                    <span><img src="img/p/34.png"></span>
+	                    <span><img src="img/p/35.jpeg"></span>
+	                    <span><img src="img/p/37.png"></span>
+	                    <span><img src="img/p/39.png"></span>
+	                    <span><img src="img/p/40.png"></span>
+	                    <span><img src="img/p/42.png"></span>
+	                    <span><img src="img/p/43.png"></span>
+	                    <span><img src="img/p/44.png"></span>
+	                    <span><img src="img/p/46.jpeg"></span>
+	                    <span><img src="img/p/47.png"></span>
+	                    <span><img src="img/p/78.jpeg"></span>
+	                    <span><img src="img/p/49.jpeg"></span>
+	                    <span><img src="img/p/50.jpeg"></span>
+	                    <span><img src="img/p/51.jpeg"></span>
+	                    <span><img src="img/p/52.png"></span>
+	                    <span><img src="img/p/53.jpeg"></span>
+	                    <span><img src="img/p/54.jpeg"></span>
+	                    <span><img src="img/p/55.jpeg"></span>
+	                    <span><img src="img/p/57.png"></span>
+	                    <span><img src="img/p/59.jpeg"></span>
 
-<section class="subscrabeBox">
-	<div class="container">
-		<div class="row">
-			<div class="subscrabeBoxWrapper">			
-				<div class="col-md-6">
-					<p>
-						Подписка на новости, кейсы, офферы
-					</p>
+	                    <span><img src="img/p2/1.jpeg"></span>
+	                    <span><img src="img/p2/2.jpeg"></span>
+	                    <span><img src="img/p2/3.png"></span>
+	                    <span><img src="img/p2/4.png"></span>
+	                    <span><img src="img/p2/5.jpeg"></span>
+						<span><img src="img/p2/6.png"></span>
+						<span><img src="img/p2/7.png"></span>
+						<span><img src="img/p2/8.png"></span>
+						<span><img src="img/p2/10.png"></span>
+						<span><img src="img/p2/11.png"></span>
+						<span><img src="img/p2/12.png"></span>
+						<span><img src="img/p2/13.png"></span>
+						<span><img src="img/p2/14.png"></span>
+						<span><img src="img/p2/15.png"></span>
+						<span><img src="img/p2/16.png"></span>
+						<span><img src="img/p2/17.jpeg"></span>
+						<span><img src="img/p2/17.png"></span>
+						<span><img src="img/p2/18.jpeg"></span>
+						<span><img src="img/p2/19.jpeg"></span>
+						<span><img src="img/p2/20.jpeg"></span>
+						<span><img src="img/p2/21.png"></span>
+						<span><img src="img/p2/22.jpeg"></span>
+						<span><img src="img/p2/23.jpeg"></span>
+	                </div>
+	                <div class="partners-list-btn">
+		                <a class="btn yellowGrd show-list" >Показать полный список</a>
+		                <a class="btn yellowGrd hide-list">Скрыть полный список</a>
+	                </div>
+
+	            </div>
+			</div>
+		</div>
+	</section>
+
+	<section class="casesNews">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<h3>Кейсы, конкурсы, новости</h3>
+					<div class="separator"><span></span></div>
 				</div>
-				<div class="col-md-6">
-					<form action="">
-						<div class="inputWrapper">
-							<span class="inputWrapper_icon">
-								<span class="glyphicon glyphicon-envelope"></span>
-							</span>
-							<input type="text" placeholder="Email" name="mail">
-							<button class="btn yellowGrd">
-								<span class="glyphicon glyphicon-chevron-right"></span>
-							</button>
+				<div class="col-12">
+					<div class="owl-carousel owl-theme casesNews-carousel">
+						<div class="item">
+							<h4>#кейсы</h4>
+							<div class="item_img">
+								<div class="embed-responsive embed-responsive-16by9">
+									<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+								</div>
+							</div>
+							<h5 class="title">Лей, пока горячо</h5>
+							<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
+							<a href="#" class="btn showMore">Подробнее</a>
 						</div>
-					</form>
+						<div class="item">
+							<h4>#кейсы</h4>
+							<div class="item_img">
+								<div class="embed-responsive embed-responsive-16by9">
+									<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+								</div>
+							</div>
+							<h5 class="title">Лей, пока горячо</h5>
+							<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
+							<a href="#" class="btn showMore">Подробнее</a>
+						</div>
+						<div class="item">
+							<h4>#кейсы</h4>
+							<div class="item_img">
+								<div class="embed-responsive embed-responsive-16by9">
+									<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+								</div>
+							</div>
+							<h5 class="title">Лей, пока горячо</h5>
+							<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
+							<a href="#" class="btn showMore">Подробнее</a>
+						</div>
+						<div class="item">
+							<h4>#кейсы</h4>
+							<div class="item_img">
+								<div class="embed-responsive embed-responsive-16by9">
+									<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+								</div>
+							</div>
+							<h5 class="title">Лей, пока горячо</h5>
+							<p>Давно работаю в партнерском бизнесе и знаю, что одним из самых качественных источников трафика является е-мейл рассылка.</p>
+							<a href="#" class="btn showMore">Подробнее</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</section>
+	</section>
+
+	<section class="subscrabeBox">
+		<div class="container">
+			<div class="row">
+				<div class="subscrabeBoxWrapper">			
+					<div class="col-md-6">
+						<p>
+							Подписка на новости, кейсы, офферы
+						</p>
+					</div>
+					<div class="col-md-6">
+						<form action="">
+							<div class="inputWrapper">
+								<span class="inputWrapper_icon">
+									<span class="glyphicon glyphicon-envelope"></span>
+								</span>
+								<input type="text" placeholder="Email" name="mail">
+								<button class="btn yellowGrd">
+									<span class="glyphicon glyphicon-chevron-right"></span>
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+</content>
 
 
 
