--- a/src/blog.html
+++ b/src/blog.html
@@ -1,7 +1,38 @@
 //= template/head.html
 
 <content class="blog">
-	
+	<header>
+		<h1>Блог 3snet</h1>
+		<div class="separator"><span></span></div>
+
+	</header>
+	<section class="subscrabeBox">
+		<div class="container">
+			<div class="row">
+				<div class="subscrabeBoxWrapper">			
+					<div class="col-md-6">
+						<p>
+							Подписка на новости, кейсы, офферы
+						</p>
+					</div>
+					<div class="col-md-6">
+						<form action="">
+							<div class="inputWrapper">
+								<span class="inputWrapper_icon">
+									<span class="glyphicon glyphicon-envelope"></span>
+								</span>
+								<input type="text" placeholder="Email" name="mail">
+								<button class="btn yellowGrd">
+									<span class="glyphicon glyphicon-chevron-right"></span>
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 </content>
 
 
