--- a/src/contacts.html
+++ b/src/contacts.html
@@ -1,8 +1,8 @@
 //= template/head.html
 
 <content class="contacts">
-	<div class="container">
 		<header>
+	<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
 					<h1>Отправить сообщение</h1>
@@ -51,12 +51,19 @@
 									<textarea placeholder="Текст сообщения"></textarea>
 								</div>
 							</div>
+
+							<div class="col-xs-12"></div>
+							<div class="col-xs-12 btnCenterRow">
+								<a href="#" class="btn yellowGrd">Отправить</a>
+							</div>
 						</div>
 					</form>
 				</div>
 			</div>
+	</div>
 		</header>
-	</div>	
+
 </content>
+//= template/mapBox.html
 
 //= template/footer.html
