--- a/src/blog.html
+++ b/src/blog.html
@@ -6,6 +6,32 @@
 		<div class="separator"><span></span></div>
 
 	</header>
+
+	<div class="container-fluid">
+		<div class="row">
+			<div class="blogContent">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-9">
+							//= template/blogItem.html
+							//= template/blogItem.html
+							//= template/blogItem.html
+							//= template/blogItem.html
+							//= template/blogItem.html
+							//= template/blogItem.html
+						</div>
+						<div class="col-md-3">
+							<div class="blogSidebar">
+								//= template/tagscloud.html
+							</div>	
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 	<section class="subscrabeBox">
 		<div class="container">
 			<div class="row">
