--- a/src/blog.html
+++ b/src/blog.html
@@ -4,7 +4,16 @@
 	<header>
 		<h1>Блог 3snet</h1>
 		<div class="separator"><span></span></div>
-
+		<div class="container">
+			<div class="blogNavigation">
+				<ul>
+					<li><a href="" class="active">Все рубрики</a></li>
+					<li><a href="">Кейсы (31)</a></li>
+					<li><a href="">Конкурсы (12)</a></li>
+					<li><a href="">Новости (11)</a></li>
+				</ul>
+			</div>
+		</div>
 	</header>
 
 	<div class="container-fluid">
