--- a/src/contacts.html
+++ b/src/contacts.html
@@ -13,46 +13,72 @@
 					<form class="contactForm">
 						<div class="row">
 							<div class="col-xs-12">
-								<select name="theme">
-									<option value="">Выбор темы</option>
-									<option value="">Выбор темы</option>
-									<option value="">Выбор темы</option>
-									<option value="">Выбор темы</option>
-								</select>
+								<div class="inputWrapper">
+									<img src="img/ico/c_star.png" class="inputIco">
+
+									<select name="theme">
+										<option value="">Выбор темы</option>
+										<option value="">Выбор темы</option>
+										<option value="">Выбор темы</option>
+										<option value="">Выбор темы</option>
+									</select>
+								</div>
 							</div>
 							<div class="col-sm-6">
 								<div class="inputWrapper">
-									<span></span>
+									<img src="img/ico/c_man.png" class="inputIco">
 									<input type="text" name="name" placeholder="Имя Фамилия">
 								</div>
 							</div>
 							<div class="col-sm-6">
 								<div class="inputWrapper">
-									<span></span>
+									<img src="img/ico/c_mail.png" class="inputIco">
 									<input type="text" name="mail" placeholder="Email">
 								</div>
 							</div>
 
 							<div class="col-sm-6">
 								<div class="inputWrapper">
-									<span></span>
+									<img src="img/ico/c_msg.png" class="inputIco">
 									<input type="text" name="messenger" placeholder="Телеграмм или скайп">
 								</div>
 							</div>
 							<div class="col-sm-6">
 								<div class="inputWrapper">
-									<span></span>
+									<img src="img/ico/c_phone.png" class="inputIco">
 									<input type="phone" name="phone" placeholder="2342354">
 								</div>
 							</div>
 
 							<div class="col-xs-12">
 								<div class="inputWrapper">
+									<img src="img/ico/c_txt.png" class="inputIco">
 									<textarea placeholder="Текст сообщения"></textarea>
 								</div>
 							</div>
 
-							<div class="col-xs-12"></div>
+							<div class="col-xs-12">
+								<div class="row">
+									<div class="col-sm-6">
+										<div class="row">
+											<div class="col-xs-6">
+												<span class="capchaWrapper">
+													<img src="img/capcha.png">
+												</span>
+											</div>
+											<div class="col-xs-6">
+												<div class="inputWrapper">
+													<img src="img/ico/c_lock.png" class="inputIco">
+													<input type="text" name="capcha" placeholder="Капча">
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-sm-6">
+										<p class="mustHaveTxt">Все обязательные пункты<br>помечены звездочкой — *</p>
+									</div>
+								</div>
+							</div>
 							<div class="col-xs-12 btnCenterRow">
 								<a href="#" class="btn yellowGrd">Отправить</a>
 							</div>
